# KangClaw

./: .gitignore  README.md  pyproject.toml
src/kangclaw/: cli.py  config.py
src/kangclaw/channels/: base.py  dingtalk.py  feishu.py  qq.py  web.py
src/kangclaw/defaults/: AGENTS.md  HEARTBEAT.md  MEMORY.md  SOUL.md  USER.md  config.toml
src/kangclaw/gateway/: agent.py  media.py  memory.py  router.py  scheduler.py  server.py  tokens.py
src/kangclaw/skills/: loader.py
src/kangclaw/tools/: __init__.py  cron_tools.py  exec_tool.py  file_tools.py  image_tools.py  send_tools.py  web_tools.py
src/kangclaw/web_ui/static/: app.js  index.html  style.css
tests/: test_kangclaw.py
